--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,9 +7,11 @@ volumes:
   local_bin:
   home_dir:
 
+
 services:
 
   ckan-dev:
+    platform: linux/amd64
     build:
       context: ckan/
       dockerfile: Dockerfile.dev
@@ -32,7 +34,7 @@ services:
       - home_dir:/srv/app/
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "-qO", "/dev/null", "http://localhost:5000"]
+      test: [ "CMD", "wget", "-qO", "/dev/null", "http://localhost:5000" ]
       interval: 60s
       timeout: 10s
       retries: 3
@@ -41,7 +43,7 @@ services:
     image: ckan/ckan-base-datapusher:${DATAPUSHER_VERSION}
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "-qO", "/dev/null", "http://localhost:8800"]
+      test: [ "CMD", "wget", "-qO", "/dev/null", "http://localhost:8800" ]
       interval: 60s
       timeout: 10s
       retries: 3
@@ -63,18 +65,18 @@ services:
       - pg_data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
-     
+      test: [ "CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}" ]
+
   solr:
     image: ckan/ckan-solr:${SOLR_IMAGE_VERSION}
     volumes:
       - solr_data:/var/solr
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "-qO", "/dev/null", "http://localhost:8983/solr/"]
+      test: [ "CMD", "wget", "-qO", "/dev/null", "http://localhost:8983/solr/" ]
 
   redis:
     image: redis:${REDIS_VERSION}
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "-e", "QUIT"]
+      test: [ "CMD", "redis-cli", "-e", "QUIT" ]
