--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,3 +1,7 @@
+networks:
+  mynetwork:
+    driver: bridge
+
 volumes:
   ckan_storage:
   pg_data:
@@ -5,11 +9,10 @@ volumes:
   pip_cache:
   site_packages:
   local_bin:
-  home_dir:
+  vscode_server:
 
 
 services:
-
   ckan-dev:
     platform: linux/amd64
     build:
@@ -19,10 +22,6 @@ services:
         - TZ=${TZ}
     env_file:
       - .env
-    links:
-      - db
-      - solr
-      - redis
     ports:
       - "0.0.0.0:${CKAN_PORT_HOST}:5000"
     volumes:
@@ -31,13 +30,15 @@ services:
       - pip_cache:/root/.cache/pip
       - site_packages:/usr/local/lib/python3.10/site-packages
       - local_bin:/usr/local/bin
-      - home_dir:/srv/app/
+      - vscode_server:/root/.vscode-server
     restart: unless-stopped
     healthcheck:
       test: [ "CMD", "wget", "-qO", "/dev/null", "http://localhost:5000" ]
       interval: 60s
       timeout: 10s
       retries: 3
+    networks:
+      - mynetwork
 
   datapusher:
     image: ckan/ckan-base-datapusher:${DATAPUSHER_VERSION}
@@ -47,6 +48,8 @@ services:
       interval: 60s
       timeout: 10s
       retries: 3
+    networks:
+      - mynetwork
 
   db:
     build:
@@ -66,6 +69,10 @@ services:
     restart: unless-stopped
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}" ]
+    networks:
+      - mynetwork
+    ports:
+      - "5432:5432"
 
   solr:
     image: ckan/ckan-solr:${SOLR_IMAGE_VERSION}
@@ -74,9 +81,21 @@ services:
     restart: unless-stopped
     healthcheck:
       test: [ "CMD", "wget", "-qO", "/dev/null", "http://localhost:8983/solr/" ]
+    networks:
+      - mynetwork
 
   redis:
     image: redis:${REDIS_VERSION}
     restart: unless-stopped
     healthcheck:
       test: [ "CMD", "redis-cli", "-e", "QUIT" ]
+    networks:
+      - mynetwork
+
+  adminer:
+    image: adminer
+    ports:
+      - "8080:8080"
+    networks:
+      - mynetwork
+    restart: unless-stopped
